--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Instagram</title>
+  <title>Insta share</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -52,7 +52,7 @@
 </head>
 <body>
   <div class="loader-container">
-    <div class="logo">Instagram</div>
+    <div class="logo">Insta Share</div>
     <div class="progress-bar">
       <div class="progress" id="progress"></div>
     </div>
