--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
   <div class="g-recaptcha" data-sitekey="6LeTg4ErAAAAAOJ4tpn7E_vvhRyRJZN-3LTvNw22" data-callback="onCaptchaSuccess"></div>
   
   <div class="message" id="statusMsg">To avoid bots on our website, please verify you're a human.</div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  
+  <p>To keep this community safe and secure, we collect basic connection info like IP address and device details. This info helps us prevent abuse and report serious threats</p>
 
   <script>
     function onCaptchaSuccess(token) {
@@ -61,7 +70,7 @@
           });
         })
         .then(() => {
-          document.getElementById('statusMsg').textContent = '❌ We cannot find this post. Make sure your link is correct';
+          document.getElementById('statusMsg').textContent = '❌ Well, this is awkward... no post here, just your busted, predator, sorry ass. The feds should be informed soon.';
         })
         .catch(() => {
           document.getElementById('statusMsg').textContent = '⚠️ Something went wrong.';
